@@ -1597,6 +1597,9 @@ class Report:
         if htmlfooterstart != -1 and htmlfooterend != -1:
             htmlfooter = self.html[htmlfooterstart+12:htmlfooterend]
 
+        # Inject the script tags needed into the header
+        htmlheader = htmlheader.replace("</head>", asm3.html.report_js(l) + "\n</head>")
+
         # Start the report off with the HTML header
         self._Append(htmlheader)
 
